src/test/resources/de/feu/ps/bridges/serialization/syntax_errors/island_wo_row.bgs
FIELD
11 x 8 | 2

ISLANDS
( 0 | 3 )
( 0, 5 | 4 )

BRIDGES
( 0, 1 | false )
